--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Ducat</groupId>
-  <artifactId>Mavenproject001</artifactId>
+  <groupId>Ducat002</groupId>
+  <artifactId>GitRepojavaAutomationsumit</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
   <build>
     <pluginManagement>
       <plugins>
@@ -59,5 +58,12 @@
 	  
 	  
   </dependencies>
+  
+  
+  
+  
+  
+  
+  
   
 </project>
