--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,34 @@
 			  
 		  </configuration>
         </plugin>
+		
+		<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testngexplicit.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testngfluent.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
+        
+
         
       </plugins>
     </pluginManagement>
