--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,45 @@
 		  </configuration>
         </plugin>    
         
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testngIframe.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
 
-        
+		<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testngAction.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
+		
+				<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testngslider.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
+		        
       </plugins>
     </pluginManagement>
   </build>
