--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,45 @@
 			  
 		  </configuration>
         </plugin>    
+        
+         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testingdoubleclick.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>   
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testingmousehover.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testingwindowscroll.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>  
 		        
       </plugins>
     </pluginManagement>
