Practicing scroll to view and auto suggestions

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,32 @@
           <version>3.1.2</version>
           <configuration>
 			  <suiteXmlFiles>
+				  <suiteXmlFile>testngscrolltoview.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
+				  <suiteXmlFile>testngautosuggestion.xml</suiteXmlFile>
+				  
+			  </suiteXmlFiles>
+			  
+		  </configuration>
+        </plugin>    
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+			  <suiteXmlFiles>
 				  <suiteXmlFile>testngfluent.xml</suiteXmlFile>
 				  
 			  </suiteXmlFiles>
